fixing 2 per row not showing

--- a/css/brandon-style.css
+++ b/css/brandon-style.css
@@ -14,5 +14,5 @@
 }
 
 .col-xs-6 {
-    width: 50%;
+    max-width: 50%;
 }
